--- a/index.html
+++ b/index.html
@@ -3,16 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Products</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
 
 
     <header>
-        
+
     </header>
 
+    <main>
 
+        <table>
+            <thead>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Year</th>
+            </thead>
+
+        </table>
+
+    </main>
+
+
+    <fotter>
+        Create by @frlopez
+    </fotter>
 
     <script src="app.js"></script>    
 
