--- a/index.html
+++ b/index.html
@@ -1,37 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
+
+<body onload="getProducts()" class="bg-blue-950 text-white">
 
 
-    <header>
-
+    <header class="mt-5 mb-50">
+        <h1>My Products</h1>
     </header>
 
-    <main>
+    <main class="mb-20">
 
-        <table>
-            <thead>
-                <th>Name</th>
-                <th>Price</th>
-                <th>Year</th>
+        <table class="bg-white text-black border border-gray-2 border-collapse min-w-100 hidden md:inline-table ">
+            <thead class="bg-amber-200">
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Year</th>
+                </tr>
             </thead>
 
+            <tbody id="tableDefinition">
+
+            </tbody>
+
         </table>
+
+        <div id="cardContainer" class="grid md:hidden grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+
+
+        </div>
 
     </main>
 
 
-    <fotter>
+    <fotter class="text-center">
         Create by @frlopez
     </fotter>
 
-    <script src="app.js"></script>    
+    <script src="app.js"></script>
 
 </body>
+
 </html>
